--- a/seminarski.bib
+++ b/seminarski.bib
@@ -7,6 +7,15 @@
  address = {Stanford, CA, USA},
 }
 
+@article{ppNETframework,
+author = {V. V. Vasilchikov},
+title = {On the Recursive Parallel Programming for the .NET Framework},
+journal = {Automatic Control and Computer Sciences},
+publisher = {Allerton Press},
+year = {2014}
+}
+
+
 @book{Harrop:2008:FS:1481410,
  author = {Harrop, Jon},
  title = {F\# for Scientists},
@@ -16,6 +25,24 @@
  address = {New York, NY, USA},
 }
 
+@book{expertFS,
+ author = {Don Syme, Adam Granicz, Antonio Cisternino},
+ title = {Expert F\#},
+ year = {2007},
+ isbn = {978-1-59059-850-4, 1-59059-850-4},
+ publisher = {Kinetic Publishing Services, LLC},
+ address = {New York, NY 10013.},
+}
+
+@book{progFs,
+ author = {Chris, Smith},
+ title = {Programing F\#},
+ year = {2009},
+ isbn = {978-0-596-15364-9},
+ publisher = {O’Reilly Media},
+ address = {1005 Gravenstein Highway North},
+}
+
 @misc{microsoft_.net,
 title = {{.NET framework}},
 note = {on-line at: \url{https://dotnet.microsoft.com/learn/dotnet/what-is-dotnet}},
@@ -23,8 +50,35 @@ author = {Microsoft}
 year = {2019}
 }
 
+@misc{RPapp,
+title = {{Reactive programing}},
+note = {on-line at: \url{http://reactivex.io/}},
+author = {ReactiveX}
+}
 
-@misc{microsoft_c},
+
+@misc{apm,
+title = {{Asynchronous Programming Model (APM)}},
+note = {on-line at: \url{https://docs.microsoft.com/en-us/dotnet/standard/asynchronous-programming-patterns/asynchronous-programming-model-apm}},
+author = {Microsoft}
+year = {2019}
+}
+
+@misc{cli,
+title = {{Get started with F\# with the .NET Core CLI}},
+note = {on-line at: \url{https://docs.microsoft.com/en-us/dotnet/fsharp/get-started/get-started-command-line}},
+author = {Microsoft}
+year = {2019}
+}
+
+@misc{msil,
+title = {{Assemblies in the Common Language Runtime (MSIL)}},
+note = {on-line at: \url{https://docs.microsoft.com/en-us/dotnet/framework/app-domains/assemblies-in-the-common-language-runtime}},
+author = {Microsoft}
+year = {2019}
+}
+
+@misc{microsoft_c,
 title = {{C\# Guide}},
 note = {on-line at: \url{https://docs.microsoft.com/en-us/dotnet/csharp/index}},
 author = {Microsoft}
@@ -87,44 +141,6 @@ author = {{Mono Project}},
 year = {2019}
 }
 
-@book{workFlow,
- author = {Chris, Smith},
- title = {Programing F\#, Asynchronous Workflows str.268},
- year = {2009},
- isbn = {978-0-596-15364-9},
- publisher = {O’Reilly Media},
- address = {1005 Gravenstein Highway North},
-}
-
-
-@book{theAL,
- author = {Chris, Smith},
- title = {Programing F\#, The Async Library str.269},
- year = {2009},
- isbn = {978-0-596-15364-9},
- publisher = {O’Reilly Media},
- address = {1005 Gravenstein Highway North},
-}
-
-@book{expertFS,
- author = {Don Syme, Adam Granicz, Antonio Cisternino},
- title = {Expert F\#},
- year = {2007},
- isbn = {978-1-59059-850-4, 1-59059-850-4},
- publisher = {Kinetic Publishing Services, LLC},
- address = {New York, NY 10013.},
-}
-
-
-@book{progFs,
- author = {Chris, Smith},
- title = {Programing F\#},
- year = {2009},
- isbn = {978-0-596-15364-9},
- publisher = {O’Reilly Media},
- address = {1005 Gravenstein Highway North},
-}
-
 @misc{ionide,
 title = {{Ionide}},
 note = {on-line at: \url{http://ionide.io/}},
@@ -132,11 +148,3 @@ note = {on-line at: \url{http://ionide.io/}},
 %year = {2019}
 }
 
-@book{progFsPFX,
- author = {Chris, Smith},
- title = {Programing F\#, PFX str.276},
- year = {2009},
- isbn = {978-0-596-15364-9},
- publisher = {O’Reilly Media},
- address = {1005 Gravenstein Highway North},
-}
